[project]
name = "gpt-4o-experiments"
version = "0.0.1"
description = "Add your description here"
authors = [{ name = "Shroominic", email = "contact@shroominic.com" }]
dependencies = [
    "openai>=1.28.2",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gpt_4o_experiments"]
